Index Page - HTML Page
This is the homepage for the Foundation 1 exercise. It is structured as per the assignment

--- a/foundation/foundation-1/index.html
+++ b/foundation/foundation-1/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Linking Exercise</title>
+    <link rel="stylesheet" href="script.css">
+    <style>
+    p{
+        color: white;
+        background-color: green;
+        font-size: 18px;
+    }
+</style>
 </head>
 <body>
 <div>Style me visa the external method!</div>
 
-<p>I woul dlike to be styled with the internal method, please.</p>
+<p>I would like to be styled with the internal method, please.</p>
 
-<button>Inline Method</button>
+<button style="background-color: orange; font-size: 18px;">Inline Method</button>
 
 </body>
 </html>
